gitops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: dkn-argocd-ns

spec:
  type: LoadBalancer

  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
